--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -25,11 +25,27 @@ float: right;
 }
 
 .home-title {
-    font-size: 85px;
+    font-size: 100px;
     color: white;
+    letter-spacing: 7px;
 
 }
 
 .Login {
     
+}
+
+.chooseTable {
+    color: white;
+    font-size: 24px;
+    line-height: 40px;
+    margin-top: 50px;
+}
+
+.tableInput {
+    @include flexSetUp(center, center, row);
+}
+
+.home-input {
+   margin: 10px;
 }
