--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,3 +9,4 @@
 @import './component/_HomePage.scss';
 @import './component/_Menu.scss';
 @import './component/_Nav.scss';
+@import './component/_MenuItems.scss';
