adding basic menu items

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,5 +8,5 @@
 @import './component/_Footer.scss';
 @import './component/_HomePage.scss';
 @import './component/_Menu.scss';
-@import './component/_Nav.scss';
 @import './component/_MenuItems.scss';
+@import './component/_FoodItems.scss';
