--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -137,3 +137,55 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: row; }
+
+.food-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  grid-gap: 1em;
+  justify-content: stretch;
+  align-items: stretch;
+  width: 100%;
+  height: 37vh; }
+  .food-container .food-together {
+    display: grid;
+    border: 1px solid black;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: stretch;
+    align-items: stretch;
+    width: 100%; }
+
+.food-img {
+  background-image: url("https://imgur.com/4iaDrJd.jpg");
+  background-size: cover;
+  width: 100%;
+  height: 100%; }
+
+.food-info {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: column; }
+  .food-info .food-title {
+    font-size: 30px;
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    box-sizing: border-box; }
+  .food-info .food-desc {
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    box-sizing: border-box; }
+  .food-info .food-to-cart {
+    width: 100%;
+    height: 50%;
+    padding: 10px;
+    box-sizing: border-box; }
+  .food-info .btn-cart {
+    width: 30%;
+    height: 100%;
+    outline: none; }
