--- a/src/styles/component/_FoodItems.scss
+++ b/src/styles/component/_FoodItems.scss
@@ -1,12 +1,11 @@
 .food-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(10px, auto);
     grid-gap: 1em;
     justify-content: stretch;
     align-items: stretch;
     width: 100%;
-    height: 37vh;
     .food-together {
         display: grid;
         border: 1px solid black;
@@ -19,10 +18,15 @@
 }
 
 .food-img {
-    background-image: url("https://imgur.com/4iaDrJd.jpg");
-    background-size: cover;
+    width: 80%;
+    height: 70%;
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(100px, auto);
+    justify-content: stretch;
+    align-items: stretch;
     width: 100%;
-    height: 100%;
 }
 
 .food-info {
@@ -33,30 +37,38 @@
     align-items: flex-start;
     flex-direction: column; 
     .food-title {
-        font-size: 30px;
+        font-size: 24px;
         width: 100%;
         height: 50%;
-        padding: 10px;
+        padding: 35px 20px 20px 20px;
         box-sizing: border-box;
     }
     
     .food-desc {
+        font-size: 15px;
         width: 100%;
         height: 100%;
-        padding: 10px;
+        padding: 0 40px 0 40px;
         box-sizing: border-box;
+        overflow: scroll;
     }
     
     .food-to-cart {
         width: 100%;
-        height: 50%;
-        padding: 10px;
+        height: 20%;
+        padding: 3px;
         box-sizing: border-box;
+        padding-bottom: 20px;
     }
     .btn-cart {
-        width: 30%;
-        height: 100%;
+        width: 20%;
+        height: 80%;
         outline: none;
     }
 }
+
+
+
+
+
 
