--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -141,12 +141,11 @@ body {
 .food-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(10px, auto);
   grid-gap: 1em;
   justify-content: stretch;
   align-items: stretch;
-  width: 100%;
-  height: 37vh; }
+  width: 100%; }
   .food-container .food-together {
     display: grid;
     border: 1px solid black;
@@ -157,10 +156,14 @@ body {
     width: 100%; }
 
 .food-img {
-  background-image: url("https://imgur.com/4iaDrJd.jpg");
-  background-size: cover;
-  width: 100%;
-  height: 100%; }
+  width: 80%;
+  height: 70%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  justify-content: stretch;
+  align-items: stretch;
+  width: 100%; }
 
 .food-info {
   width: 100%;
@@ -170,22 +173,25 @@ body {
   align-items: flex-start;
   flex-direction: column; }
   .food-info .food-title {
-    font-size: 30px;
+    font-size: 24px;
     width: 100%;
     height: 50%;
-    padding: 10px;
+    padding: 35px 20px 20px 20px;
     box-sizing: border-box; }
   .food-info .food-desc {
+    font-size: 15px;
     width: 100%;
     height: 100%;
-    padding: 10px;
-    box-sizing: border-box; }
+    padding: 0 40px 0 40px;
+    box-sizing: border-box;
+    overflow: scroll; }
   .food-info .food-to-cart {
     width: 100%;
-    height: 50%;
-    padding: 10px;
-    box-sizing: border-box; }
+    height: 20%;
+    padding: 3px;
+    box-sizing: border-box;
+    padding-bottom: 20px; }
   .food-info .btn-cart {
-    width: 30%;
-    height: 100%;
+    width: 20%;
+    height: 80%;
     outline: none; }
