--- a/src/styles/component/_FoodItems.scss
+++ b/src/styles/component/_FoodItems.scss
@@ -1,6 +1,6 @@
 .food-container {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     grid-auto-rows: minmax(10px, auto);
     grid-gap: 1em;
     justify-content: stretch;
@@ -17,16 +17,13 @@
     }
 }
 
-.food-img {
-    width: 80%;
-    height: 70%;
-    display: grid;
 
-    grid-template-columns: 1fr 1fr;
+.food-img {
+    display: grid;
+    grid-template-columns: 1fr;
     grid-auto-rows: minmax(100px, auto);
     justify-content: stretch;
     align-items: stretch;
-    width: 100%;
 }
 
 .food-info {
@@ -72,3 +69,24 @@
 
 
 
+
+
+.foods {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(10px, auto);
+    grid-gap: 1em;
+    justify-content: stretch;
+    align-items: stretch;
+    width: 100%;
+
+    .box {
+    width: 100%;
+    height: 100px;
+    border: 1px solid blue;
+    }
+}
+
+.space {
+    padding: 20px;
+}
