--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -140,7 +140,7 @@ body {
 
 .food-container {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: minmax(10px, auto);
   grid-gap: 1em;
   justify-content: stretch;
@@ -156,14 +156,11 @@ body {
     width: 100%; }
 
 .food-img {
-  width: 80%;
-  height: 70%;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   grid-auto-rows: minmax(100px, auto);
   justify-content: stretch;
-  align-items: stretch;
-  width: 100%; }
+  align-items: stretch; }
 
 .food-info {
   width: 100%;
@@ -195,3 +192,19 @@ body {
     width: 20%;
     height: 80%;
     outline: none; }
+
+.foods {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-auto-rows: minmax(10px, auto);
+  grid-gap: 1em;
+  justify-content: stretch;
+  align-items: stretch;
+  width: 100%; }
+  .foods .box {
+    width: 100%;
+    height: 100px;
+    border: 1px solid blue; }
+
+.space {
+  padding: 20px; }
