--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,51 @@
+.admin-title {
+  font-size: 32px; }
+
+.top {
+  float: right; }
+
+.Orders-container {
+  width: 90%;
+  height: 400px;
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+  .Orders-container .Orders {
+    width: 50%;
+    height: 100%;
+    float: right; }
+    .Orders-container .Orders .order-title {
+      width: 100%;
+      height: 10%;
+      font-size: 24px; }
+    .Orders-container .Orders .table {
+      width: 100%;
+      height: 10%;
+      border: 1px solid black;
+      border-bottom: none; }
+    .Orders-container .Orders .orders {
+      width: 100%;
+      height: 52%;
+      border: 1px solid black;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      border-bottom: none; }
+    .Orders-container .Orders .btn-totalbox {
+      width: 100%;
+      height: 15%;
+      border: 1px solid black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: row; }
+      .Orders-container .Orders .btn-totalbox .btn {
+        width: 25%;
+        height: 50%; }
+
 .cart-title {
   width: 100%;
   height: 100px;
