--- a/src/styles/component/_AdminPage.scss
+++ b/src/styles/component/_AdminPage.scss
@@ -10,18 +10,21 @@
     width: 90%;
     height: 400px;
     margin: 40px;
-    @include flexSetUp(center,center,column);
+    @include flexSetUp(center,center);
+    
     .Orders {
         width: 50%;
         height: 100%;
-        float: right;
-        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        align-content: center;
 
         .order-title {
             width: 100%;
             height: 10%;
-            font-size: 24px;
-            
+            font-size: 24px;   
         }
         
         .table {
@@ -29,17 +32,16 @@
             height: 10%;
             border: 1px solid black;
             border-bottom: none;
+            
         }
 
         .orders {
             width: 100%;
-            height: 52%;
+            height: 42%;
+            overflow: scroll;
             border: 1px solid black;
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
             border-bottom: none;
+            text-align: left;
         }
 
         .btn-totalbox {
