--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,11 +11,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; }
+  flex-direction: row; }
   .Orders-container .Orders {
     width: 50%;
     height: 100%;
-    float: right; }
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center; }
     .Orders-container .Orders .order-title {
       width: 100%;
       height: 10%;
@@ -27,13 +31,11 @@
       border-bottom: none; }
     .Orders-container .Orders .orders {
       width: 100%;
-      height: 52%;
+      height: 42%;
+      overflow: scroll;
       border: 1px solid black;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      justify-content: center;
-      border-bottom: none; }
+      border-bottom: none;
+      text-align: left; }
     .Orders-container .Orders .btn-totalbox {
       width: 100%;
       height: 15%;
