--- a/src/styles/component/_Menu.scss
+++ b/src/styles/component/_Menu.scss
@@ -9,6 +9,17 @@
     height: 100vh;
 }
 
+.menu-top {
+    width: 100%;
+    height: 100px;
+    display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+}
+
 .dessert111 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -16,41 +27,61 @@
     justify-content: stretch;
     align-items: stretch;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     font-size: 55px;
 
     .dessert1 {
-        @include flexSetUp(center, center);
+        @include flexSetUp(center, flex-end);
         background-image: url('https://i.imgur.com/s2fvVxc.jpg');
         background-size: cover;
-        margin: 10px;
+        margin: 7px;
     }
 
     .dessert2 {
-        @include flexSetUp(center, center);
+        @include flexSetUp(center, flex-end);
         background-image: url('https://imgur.com/ksN47Xd.jpg');
         background-size: cover;
-        margin: 10px;
+        margin: 7px;
     }
     .dessert3 {
-        @include flexSetUp(center, center);
+        @include flexSetUp(center, flex-end);
         background-image: url('https://i.imgur.com/d7wVdrD.jpg?1');
         background-size: cover;
-        margin: 10px;
+        margin: 7px;
     }
     .dessert4 {
-        @include flexSetUp(center, center);
+        @include flexSetUp(center, flex-end);
         background-image: url('https://imgur.com/ujnuFvf.jpg');
         background-size: cover;
-        margin: 10px;
+        margin: 7px;
     }
     .dessert5 {
-        @include flexSetUp(center, center);
+        @include flexSetUp(center, flex-end);
         background-image: url('https://imgur.com/QPKquke.jpg');
         background-size: cover;
-        margin: 10px;
+        margin: 7px;
     }
     
 }
 
+.top {
+    @include flexSetUp(center,center,column);
+    height: 150px;
+    margin: 0;
+    font-size: 42px;
+}
 
+.dev {
+    margin: 15px;
+}
+
+.fork {
+    @include flexSetUp(center,center, row);
+}
+
+.Link-menu {
+    text-decoration: none;
+    color: #d1b183;
+    text-shadow: 2px 2px #2b2c2f;
+    margin-bottom: 10px;
+}
