--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -244,87 +244,6 @@ button.stripe {
   text-decoration: none;
   color: #d1b183; }
 
-.a-btn {
-  background: #2b2c2f;
-  padding-left: 20px;
-  padding-right: 80px;
-  height: 25px;
-  display: inline-block;
-  position: relative;
-  border-radius: 20px;
-  float: left;
-  clear: both;
-  margin: 10px 0px;
-  overflow: hidden;
-  transition: all 0.3s linear; }
-
-.a-btn-text {
-  padding-top: 5px;
-  display: block;
-  font-size: 14px;
-  white-space: nowrap;
-  color: white;
-  transition: all 0.2s linear; }
-
-.a-btn-slide-text {
-  position: absolute;
-  height: 100%;
-  top: 0px;
-  right: 52px;
-  width: 0px;
-  background: #63707e;
-  text-shadow: 0px -1px 1px #363f49;
-  color: #fff;
-  font-size: 18px;
-  white-space: nowrap;
-  text-transform: uppercase;
-  text-align: left;
-  text-indent: 10px;
-  overflow: hidden;
-  line-height: 38px;
-  box-shadow: -1px 0px 1px rgba(255, 255, 255, 0.4), 1px 1px 2px rgba(0, 0, 0, 0.2) inset;
-  transition: width 0.3s linear; }
-
-.a-btn-icon-right {
-  position: absolute;
-  right: 0px;
-  top: 0px;
-  height: 100%;
-  width: 52px;
-  border-left: 1px solid #5d81ab;
-  box-shadow: 1px 0px 1px rgba(255, 255, 255, 0.4) inset; }
-
-.a-btn-icon-right span {
-  width: 38px;
-  height: 38px;
-  opacity: 0.7;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  margin: -20px 0px 0px -20px;
-  transition: all 0.3s linear; }
-
-.a-btn:hover {
-  padding-right: 180px;
-  box-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8) inset, 1px 1px 3px rgba(0, 0, 0, 0.2); }
-
-.a-btn:hover .a-btn-text {
-  text-shadow: 0px 1px 1px #5d81ab;
-  color: #fff; }
-
-.a-btn:hover .a-btn-slide-text {
-  width: 100px; }
-
-.a-btn:hover .a-btn-icon-right span {
-  opacity: 1; }
-
-.a-btn:active {
-  position: relative;
-  top: 1px;
-  background: #5d81ab;
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
-  border-color: #80a9da; }
-
 .footer-container {
   width: 100%;
   height: 100px;
@@ -356,22 +275,8 @@ body {
 .home-title {
   font-size: 100px;
   color: white;
+  text-shadow: 2px 2px #2b2c2f;
   letter-spacing: 7px; }
-
-.chooseTable {
-  color: white;
-  font-size: 24px;
-  line-height: 40px;
-  margin-top: 50px; }
-
-.tableInput {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row; }
-
-.home-input {
-  margin: 10px; }
 
 .Wrap-Menu {
   display: grid;
@@ -383,6 +288,16 @@ body {
   width: 100%;
   height: 100vh; }
 
+.menu-top {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center; }
+
 .dessert111 {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
@@ -390,48 +305,72 @@ body {
   justify-content: stretch;
   align-items: stretch;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   font-size: 55px; }
   .dessert111 .dessert1 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     background-image: url("https://i.imgur.com/s2fvVxc.jpg");
     background-size: cover;
-    margin: 10px; }
+    margin: 7px; }
   .dessert111 .dessert2 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     background-image: url("https://imgur.com/ksN47Xd.jpg");
     background-size: cover;
-    margin: 10px; }
+    margin: 7px; }
   .dessert111 .dessert3 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     background-image: url("https://i.imgur.com/d7wVdrD.jpg?1");
     background-size: cover;
-    margin: 10px; }
+    margin: 7px; }
   .dessert111 .dessert4 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     background-image: url("https://imgur.com/ujnuFvf.jpg");
     background-size: cover;
-    margin: 10px; }
+    margin: 7px; }
   .dessert111 .dessert5 {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     flex-direction: row;
     background-image: url("https://imgur.com/QPKquke.jpg");
     background-size: cover;
-    margin: 10px; }
+    margin: 7px; }
+
+.top {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 150px;
+  margin: 0;
+  font-size: 42px; }
+
+.dev {
+  margin: 15px; }
+
+.fork {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+
+.Link-menu {
+  text-decoration: none;
+  color: #d1b183;
+  text-shadow: 2px 2px #2b2c2f;
+  margin-bottom: 10px; }
 
 .title {
   width: 100%;
