--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -21,76 +21,73 @@
     
         .cart-titles {
             @include flexSetUp(center, center, row);
-            border: 1px solid black;
-            height: 50px;
-            width: 90%;
+                border: 1px solid black;
+                height: 50px;
+                width: 80%;
     
                 .Product {
-            width: 45%;
-            height: 100%;
+                    width: 45%;
+                    height: 100%;
                 }
             
                 .Price {
-                    width: 15%;
-                    height: 100%;
-                }
-            
-                .Quantity {
-                    width: 15%;
-                    height: 100%;
-                }
-                
-                .Total {
-                    width: 15%;
+                    width: 25%;
                     height: 100%;
                 }
             }
     
             .cart-item {
-                width: 90%;
-                height: 200px;
+                width: 80%;
+                height: auto;
+                @include flexSetUp(center, center, row);
                 border: 1px solid black;
-                @include flexSetUp(center, center);
     
                 .cart-delete {
-                    width: 2%;
-                    height: 100px;
-                    border: 1px solid green;
+                    width: 4%;
+                    height: auto;
                 }
     
                 .cart-img-box {
-                    width: 18%;
-                    height: 100px;
-                    border: 1px solid green;
+                    // width: 22%;
+                    // height: 200px;
+                    // display: flex;
+                    // border: 1px solid red;
+                    // justify-content: stretch;
+                    // align-items: flex-start;
+                    // margin: 5px;
+                    // flex: 1 1;
+                    // min-width: 100px;
+                    max-height: 300px;
+                    width: 30%;
+                    overflow: hidden;
+                    object-fit: scale-down;
+                }
+
+                img.punks {
+                    max-width: 150px;
+                    max-height: 200px;
                 }
     
                 .cart-product {
-                    width: 31%;
-                    height: 100px;
-                    border: 1px solid green;
+                    width: 35%;
+                    font-size: 14px;
+                    height: auto;
                 }
     
                 .cart-price {
                     width: 17%;
                     height: 100px;
-                    border: 1px solid green;
+                    display: flex;
+                    font-size: 12px;
+                    justify-content: center;
+                    align-items: center;
+                    margin-left: 20px;
                 }
-    
-                .cart-quantity {
-                    width: 17%;
-                    height: 100px;
-                    border: 1px solid green;
-                }
-    
-                .cart-total {
-                    width: 17%;
-                    height: 100px;
-                    border: 1px solid green;
-                }
+
             }
     
             .cart-coupon {
-                width: 90%;
+                width: 80%;
                 height: 50px;
                 border: 1px solid black;
                 display: flex;
@@ -124,7 +121,7 @@
     
     
             .Totals-container {
-                width: 90%;
+                width: 80%;
                 height: 400px;
     
                 .TOTALS {
@@ -132,12 +129,10 @@
                     height: 100%;
                     float: right;
                     
-    
                     .cart-total-title {
                         width: 100%;
                         height: 10%;
                         font-size: 24px;
-                        
                     }
                     
                     .subtotal {
@@ -145,6 +140,12 @@
                         height: 10%;
                         border: 1px solid black;
                         border-bottom: none;
+                        display: flex;
+                        justify-content: flex-end; 
+                    }
+
+                    .sub {
+                        padding-right: 20px;
                     }
         
                     .receipt {
@@ -152,12 +153,35 @@
                         height: 52%;
                         border: 1px solid black;
                         display: flex;
-                        flex-direction: row;
+                        flex-direction: column;
                         flex-wrap: nowrap;
                         justify-content: flex-end;
                         align-items: flex-start;
                         align-content: stretch;
                         border-bottom: none;
+                    }
+
+                    .receipt-item {
+                        width: 100%;
+                        height: auto;
+                        @include flexSetUp(center, center, row);
+            
+                        .receipt-product {
+                            width: 70%;
+                            font-size: 14px;
+                            height: auto;
+                        }
+            
+                        .receipt-price {
+                            width: 30%;
+                            height: 100px;
+                            display: flex;
+                            font-size: 12px;
+                            align-items: center;
+                            justify-content: flex-end;
+                            padding-right: 35px;
+                        }
+        
                     }
         
                     .total {
@@ -165,6 +189,8 @@
                         height: 10%;
                         border: 1px solid black;
                         border-bottom: none;
+                        display: flex;
+                        justify-content: flex-end;
                     }
     
                     .btn-totalbox {
@@ -245,3 +271,8 @@
         color: #d1b183;
     }
 
+@media (min-width:600px) {
+    .receipt{
+    font-size: 10px;
+    }
+}
