--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -76,53 +76,46 @@
     flex-direction: row;
     border: 1px solid black;
     height: 50px;
-    width: 90%; }
+    width: 80%; }
     .cart-container .cart-titles .Product {
       width: 45%;
       height: 100%; }
     .cart-container .cart-titles .Price {
-      width: 15%;
-      height: 100%; }
-    .cart-container .cart-titles .Quantity {
-      width: 15%;
-      height: 100%; }
-    .cart-container .cart-titles .Total {
-      width: 15%;
+      width: 25%;
       height: 100%; }
   .cart-container .cart-item {
-    width: 90%;
-    height: 200px;
-    border: 1px solid black;
+    width: 80%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row; }
+    flex-direction: row;
+    border: 1px solid black; }
     .cart-container .cart-item .cart-delete {
-      width: 2%;
-      height: 100px;
-      border: 1px solid green; }
+      width: 4%;
+      height: auto; }
     .cart-container .cart-item .cart-img-box {
-      width: 18%;
-      height: 100px;
-      border: 1px solid green; }
+      max-height: 300px;
+      width: 30%;
+      overflow: hidden;
+      object-fit: scale-down; }
+    .cart-container .cart-item img.punks {
+      max-width: 150px;
+      max-height: 200px; }
     .cart-container .cart-item .cart-product {
-      width: 31%;
-      height: 100px;
-      border: 1px solid green; }
+      width: 35%;
+      font-size: 14px;
+      height: auto; }
     .cart-container .cart-item .cart-price {
       width: 17%;
       height: 100px;
-      border: 1px solid green; }
-    .cart-container .cart-item .cart-quantity {
-      width: 17%;
-      height: 100px;
-      border: 1px solid green; }
-    .cart-container .cart-item .cart-total {
-      width: 17%;
-      height: 100px;
-      border: 1px solid green; }
+      display: flex;
+      font-size: 12px;
+      justify-content: center;
+      align-items: center;
+      margin-left: 20px; }
   .cart-container .cart-coupon {
-    width: 90%;
+    width: 80%;
     height: 50px;
     border: 1px solid black;
     display: flex;
@@ -148,7 +141,7 @@
       color: #d1b183;
       outline: none; }
   .cart-container .Totals-container {
-    width: 90%;
+    width: 80%;
     height: 400px; }
     .cart-container .Totals-container .TOTALS {
       width: 50%;
@@ -162,23 +155,48 @@
         width: 100%;
         height: 10%;
         border: 1px solid black;
-        border-bottom: none; }
+        border-bottom: none;
+        display: flex;
+        justify-content: flex-end; }
+      .cart-container .Totals-container .TOTALS .sub {
+        padding-right: 20px; }
       .cart-container .Totals-container .TOTALS .receipt {
         width: 100%;
         height: 52%;
         border: 1px solid black;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         flex-wrap: nowrap;
         justify-content: flex-end;
         align-items: flex-start;
         align-content: stretch;
         border-bottom: none; }
+      .cart-container .Totals-container .TOTALS .receipt-item {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: row; }
+        .cart-container .Totals-container .TOTALS .receipt-item .receipt-product {
+          width: 70%;
+          font-size: 14px;
+          height: auto; }
+        .cart-container .Totals-container .TOTALS .receipt-item .receipt-price {
+          width: 30%;
+          height: 100px;
+          display: flex;
+          font-size: 12px;
+          align-items: center;
+          justify-content: flex-end;
+          padding-right: 35px; }
       .cart-container .Totals-container .TOTALS .total {
         width: 100%;
         height: 10%;
         border: 1px solid black;
-        border-bottom: none; }
+        border-bottom: none;
+        display: flex;
+        justify-content: flex-end; }
       .cart-container .Totals-container .TOTALS .btn-totalbox {
         width: 100%;
         height: 15%;
@@ -243,6 +261,10 @@ button.stripe {
 .back-link {
   text-decoration: none;
   color: #d1b183; }
+
+@media (min-width: 600px) {
+  .receipt {
+    font-size: 10px; } }
 
 .footer-container {
   width: 100%;
