--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -5,7 +5,10 @@ body {
 .HomePage-container {
   width: 100%;
   height: 100vh;
-  background-image: url('https://i.imgur.com/gmaqcSX.jpg');
+  background: url('https://i.imgur.com/gmaqcSX.jpg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
 }
 
@@ -17,6 +20,7 @@ float: right;
 .HomePage {
     width: 100%;
     height: auto;
+    position: relative;
 }
 
 .menu-access {
@@ -32,17 +36,17 @@ float: right;
 
 }
 
-// .chooseTable {
-//     color: white;
-//     font-size: 24px;
-//     line-height: 40px;
-//     margin-top: 50px;
-// }
+.chooseTable {
+    color: white;
+    font-size: 24px;
+    line-height: 40px;
+    margin-top: 50px;
+}
 
-// .tableInput {
-//     @include flexSetUp(center, center, row);
-// }
+.tableInput {
+    @include flexSetUp(center, center, row);
+}
 
-// .home-input {
-//    margin: 10px;
-// }
+.home-input {
+   margin: 10px;
+}
