--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -255,7 +255,10 @@ body {
 .HomePage-container {
   width: 100%;
   height: 100vh;
-  background-image: url("https://i.imgur.com/gmaqcSX.jpg");
+  background: url("https://i.imgur.com/gmaqcSX.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover; }
 
 .Login {
@@ -263,7 +266,8 @@ body {
 
 .HomePage {
   width: 100%;
-  height: auto; }
+  height: auto;
+  position: relative; }
 
 .menu-access {
   display: flex;
@@ -277,6 +281,21 @@ body {
   color: white;
   text-shadow: 2px 2px #2b2c2f;
   letter-spacing: 7px; }
+
+.chooseTable {
+  color: white;
+  font-size: 24px;
+  line-height: 40px;
+  margin-top: 50px; }
+
+.tableInput {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+
+.home-input {
+  margin: 10px; }
 
 .Wrap-Menu {
   display: grid;
