--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -95,13 +95,14 @@
       width: 4%;
       height: auto; }
     .cart-container .cart-item .cart-img-box {
-      max-height: 300px;
-      width: 30%;
+      max-height: 200px;
+      width: 20%;
       overflow: hidden;
       object-fit: scale-down; }
     .cart-container .cart-item img.punks {
-      max-width: 150px;
-      max-height: 200px; }
+      max-width: 200px;
+      max-height: 120px;
+      object-fit: scale-down; }
     .cart-container .cart-item .cart-product {
       width: 35%;
       font-size: 14px;
@@ -127,7 +128,7 @@
       height: 65%;
       width: 20%;
       margin-left: 10px;
-      font-size: 18px;
+      font-size: 16px;
       letter-spacing: 1px;
       outline: none; }
     .cart-container .cart-coupon .apply-coupon {
@@ -136,7 +137,7 @@
       width: 10%;
       background-color: white;
       border: 1px solid #2b2c2f;
-      font-size: 12px;
+      font-size: 11px;
       letter-spacing: 2px;
       color: #d1b183;
       outline: none; }
@@ -235,8 +236,7 @@
 
 .Link:hover {
   background-color: #2b2c2f;
-  color: #d1b183;
-  font-weight: bold; }
+  color: #d1b183; }
 
 button.stripe {
   overflow: hidden;
