--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -1,5 +1,11 @@
 body {
     margin: 0;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
+
+.div {
+    width:100%;
+    height: 100vh;
 }
 
 .HomePage-container {
@@ -10,6 +16,13 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  position:absolute;
+}
+.HomePage-img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: rgba(7, 7, 7, 0.432);
 }
 
 .Login {
@@ -20,27 +33,29 @@ float: right;
 .HomePage {
     width: 100%;
     height: auto;
-    position: relative;
+    position: absolute;
 }
 
 .menu-access {
     @include flexSetUp(center, center, column);
-    height: 100vh;
+    height: 90vh;
 }
 
 .home-title {
-    font-size: 100px;
-    color: white;
+    font-size: 110px;
+    color: rgb(223, 222, 222);
     text-shadow: 2px 2px #2b2c2f;
-    letter-spacing: 7px;
-
+    letter-spacing: 8px;
+    font-family: 'Lobster', sans-serif;
 }
 
 .chooseTable {
-    color: white;
-    font-size: 24px;
+    color: rgb(223, 222, 222);
+    font-size: 20px;
     line-height: 40px;
-    margin-top: 50px;
+    margin-top: 30px;
+    text-shadow: 2px 2px #2b2c2f;
+    letter-spacing: 3px;
 }
 
 .tableInput {
@@ -49,4 +64,51 @@ float: right;
 
 .home-input {
    margin: 10px;
+   width: 30px;
+   height: 30px;
+   outline: none;
+   background: rgb(202, 200, 200);
+   font-weight: bold;
+}
+
+.next-btn {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    outline: none;
+    @include flexSetUp(center,center, row)
+}
+
+.hover-arrow {
+    opacity: 0;
+    @include flexSetUp(center,center)
+}
+
+.hover-arrow2 {
+    opacity: 0;
+    @include flexSetUp(center,center)
+}
+
+@media (any-hover: hover) {
+    .next-btn:hover {
+        .hover-arrow{
+        opacity: 1;
+        }
+        .hover-arrow2 {
+            opacity: 2;
+            transition-delay: 0.2s;
+        }
+    }
+}
+
+.login {
+    width: 95%;
+    display: flex;
+    justify-content: flex-end;
+    height: 50px;
+    @include flexSetUp(flex-end,flex-end)
+}
+
+a.log{
+    color: rgba(255, 255, 255, 0.514);
+    text-decoration: none;
 }
