--- a/src/styles/component/_MenuItems.scss
+++ b/src/styles/component/_MenuItems.scss
@@ -1,9 +1,9 @@
 .title {
     width: 100%;
-    height: 100px;
+    height: 70px;
     @include flexSetUp(flex-end, center, column);
-    font-size: 40px;
-    letter-spacing: 5px;
+    font-size: 43px;
+    font-family: 'Lobster', sans-serif;
 }
 
 .Nav {
@@ -13,17 +13,52 @@
 }
 
 .nav-container {
-    width: 70%;
-    height: 40%;
-    border: 1px solid rgb(14, 13, 13);
-    border-radius: 70px;
+    width: 100%;
+    height: 50%;
+    // border: 1px solid rgb(14, 13, 13);
+    // border-radius: 100px;
     @include flexSetUp(center, center, row);
 
     .drinks {
-        width: 20%;
-        height: 100%;
-        border: 1px solid rgb(111, 111, 112);
-        border-radius: 70px;
+        height: 50px;
+        width: 50px;
+        background-image: url('https://imgur.com/bMd7UxS.jpg');
+        background-size: cover;
+    }
+
+    .linkk {
+        width:50px;
+        height: 50px;
         @include flexSetUp(center, center);
+        text-decoration: none;
+    }
+
+    .salads {
+        height: 50px;
+        width: 50px;
+        background-image: url('https://imgur.com/3qaZgsE.jpg');
+        background-size: cover;
+    }
+
+    .desserts {
+        height: 50px;
+        width: 50px;
+        background-image: url('https://imgur.com/kVSPSQi.jpg');
+        background-size: cover;
+    }
+
+    .apps {
+        height: 48px;
+        width: 48px;
+        background-image: url('https://imgur.com/X5t9qBa.jpg');
+        background-size: cover;
+    }
+
+    .entrees {
+        height: 50px;
+        width: 50px;
+        background-image: url('https://imgur.com/w2NxWDv.jpg');
+        background-size: cover;
     }
 }
+
