--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,15 +5,14 @@
   float: right; }
 
 .Orders-container {
-  width: 90%;
-  height: 400px;
-  margin: 40px;
+  width: 100%;
+  height: 430px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row; }
   .Orders-container .Orders {
-    width: 50%;
+    width: 40%;
     height: 100%;
     display: flex;
     flex-wrap: wrap;
@@ -90,7 +89,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: row;
-    border: 1px solid black; }
+    border-left: 1px solid black;
+    border-right: 1px solid black; }
     .cart-container .cart-item .cart-delete {
       width: 4%;
       height: auto; }
@@ -272,7 +272,12 @@ button.stripe {
   background-color: #2b2c2f; }
 
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: 'Open Sans Condensed', sans-serif; }
+
+.div {
+  width: 100%;
+  height: 100vh; }
 
 .HomePage-container {
   width: 100%;
@@ -281,7 +286,14 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover; }
+  background-size: cover;
+  position: absolute; }
+
+.HomePage-img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(7, 7, 7, 0.432); }
 
 .Login {
   float: right; }
@@ -289,26 +301,29 @@ body {
 .HomePage {
   width: 100%;
   height: auto;
-  position: relative; }
+  position: absolute; }
 
 .menu-access {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 100vh; }
+  height: 90vh; }
 
 .home-title {
-  font-size: 100px;
-  color: white;
+  font-size: 110px;
+  color: #dfdede;
   text-shadow: 2px 2px #2b2c2f;
-  letter-spacing: 7px; }
+  letter-spacing: 8px;
+  font-family: 'Lobster', sans-serif; }
 
 .chooseTable {
-  color: white;
-  font-size: 24px;
+  color: #dfdede;
+  font-size: 20px;
   line-height: 40px;
-  margin-top: 50px; }
+  margin-top: 30px;
+  text-shadow: 2px 2px #2b2c2f;
+  letter-spacing: 3px; }
 
 .tableInput {
   display: flex;
@@ -317,7 +332,56 @@ body {
   flex-direction: row; }
 
 .home-input {
-  margin: 10px; }
+  margin: 10px;
+  width: 30px;
+  height: 30px;
+  outline: none;
+  background: #cac8c8;
+  font-weight: bold; }
+
+.next-btn {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+
+.hover-arrow {
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+
+.hover-arrow2 {
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row; }
+
+@media (any-hover: hover) {
+  .next-btn:hover .hover-arrow {
+    opacity: 1; }
+  .next-btn:hover .hover-arrow2 {
+    opacity: 2;
+    transition-delay: 0.2s; } }
+
+.login {
+  width: 95%;
+  display: flex;
+  justify-content: flex-end;
+  height: 50px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  flex-direction: row; }
+
+a.log {
+  color: rgba(255, 255, 255, 0.514);
+  text-decoration: none; }
 
 .Wrap-Menu {
   display: grid;
@@ -346,8 +410,9 @@ body {
   justify-content: stretch;
   align-items: stretch;
   width: 100%;
-  height: 80vh;
-  font-size: 55px; }
+  height: 75vh;
+  font-size: 55px;
+  position: absolute; }
   .dessert111 .dessert1 {
     display: flex;
     justify-content: center;
@@ -389,17 +454,89 @@ body {
     background-size: cover;
     margin: 7px; }
 
+.dessert1111 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-auto-rows: minmax(100px, auto);
+  justify-content: stretch;
+  align-items: stretch;
+  width: 100%;
+  height: 75vh;
+  font-size: 55px;
+  position: absolute; }
+  .dessert1111 .dessert11 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+    background-size: cover;
+    margin: 7px;
+    background-color: rgba(7, 7, 7, 0.432);
+    opacity: 1; }
+  .dessert1111 .dessert21 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+    background-size: cover;
+    margin: 7px;
+    background-color: rgba(7, 7, 7, 0.432);
+    opacity: 1; }
+  .dessert1111 .dessert31 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+    background-size: cover;
+    margin: 7px;
+    background-color: rgba(7, 7, 7, 0.432);
+    opacity: 1; }
+  .dessert1111 .dessert41 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+    background-size: cover;
+    margin: 7px;
+    background-color: rgba(7, 7, 7, 0.432);
+    opacity: 1; }
+  .dessert1111 .dessert51 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-direction: row;
+    background-size: cover;
+    margin: 7px;
+    background-color: rgba(7, 7, 7, 0.432);
+    opacity: 1; }
+
+.dessert11:hover {
+  opacity: 0; }
+
+.dessert21:hover {
+  opacity: 0; }
+
+.dessert31:hover {
+  opacity: 0; }
+
+.dessert41:hover {
+  opacity: 0; }
+
+.dessert51:hover {
+  opacity: 0; }
+
+.top2 {
+  height: 80%;
+  margin-bottom: 580px; }
+
 .top {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  height: 150px;
-  margin: 0;
-  font-size: 42px; }
+  font-size: 42px;
+  height: 20%; }
 
 .dev {
-  margin: 15px; }
+  margin: 15px;
+  font-family: 'Lobster', sans-serif;
+  margin-left: 25px; }
 
 .fork {
   display: flex;
@@ -409,19 +546,24 @@ body {
 
 .Link-menu {
   text-decoration: none;
-  color: #d1b183;
+  color: #dfdede;
   text-shadow: 2px 2px #2b2c2f;
-  margin-bottom: 10px; }
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-direction: row; }
 
 .title {
   width: 100%;
-  height: 100px;
+  height: 70px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
   flex-direction: column;
-  font-size: 40px;
-  letter-spacing: 5px; }
+  font-size: 43px;
+  font-family: 'Lobster', sans-serif; }
 
 .Nav {
   width: 100%;
@@ -432,23 +574,45 @@ body {
   flex-direction: column; }
 
 .nav-container {
-  width: 70%;
-  height: 40%;
-  border: 1px solid #0e0d0d;
-  border-radius: 70px;
+  width: 100%;
+  height: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row; }
   .nav-container .drinks {
-    width: 20%;
-    height: 100%;
-    border: 1px solid #6f6f70;
-    border-radius: 70px;
+    height: 50px;
+    width: 50px;
+    background-image: url("https://imgur.com/bMd7UxS.jpg");
+    background-size: cover; }
+  .nav-container .linkk {
+    width: 50px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: row; }
+    flex-direction: row;
+    text-decoration: none; }
+  .nav-container .salads {
+    height: 50px;
+    width: 50px;
+    background-image: url("https://imgur.com/3qaZgsE.jpg");
+    background-size: cover; }
+  .nav-container .desserts {
+    height: 50px;
+    width: 50px;
+    background-image: url("https://imgur.com/kVSPSQi.jpg");
+    background-size: cover; }
+  .nav-container .apps {
+    height: 48px;
+    width: 48px;
+    background-image: url("https://imgur.com/X5t9qBa.jpg");
+    background-size: cover; }
+  .nav-container .entrees {
+    height: 50px;
+    width: 50px;
+    background-image: url("https://imgur.com/w2NxWDv.jpg");
+    background-size: cover; }
 
 .food-container {
   display: grid;
