--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -1,3 +1,8 @@
+.Checkout {
+    background-color: rgba(0, 0, 0, 0.048);
+}
+
+
 .cart-title {
     width: 100%;
     height: 100px;
@@ -264,7 +269,7 @@
         width: 9%;
         height: 25%;
         border: none;
-        background-color: white;
+        background-color: rgba(0, 0, 0, 0);
         font-size: 16px;
     }
     
