--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -51,9 +51,9 @@ float: right;
 
 .chooseTable {
     color: rgb(223, 222, 222);
-    font-size: 20px;
+    font-size: 26px;
     line-height: 40px;
-    margin-top: 30px;
+    margin-top: 90px;
     text-shadow: 2px 2px #2b2c2f;
     letter-spacing: 3px;
 }
@@ -64,12 +64,16 @@ float: right;
 
 .home-input {
    margin: 10px;
-   width: 30px;
-   height: 30px;
+   width: 50px;
+   height: 50px;
    outline: none;
    background: rgb(202, 200, 200);
    font-weight: bold;
+   font-size: 28px;
+   margin-left: 70px;
 }
+
+
 
 .next-btn {
     background-color: rgba(255, 255, 255, 0);
