--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -47,6 +47,9 @@
         width: 25%;
         height: 50%; }
 
+.Checkout {
+  background-color: rgba(0, 0, 0, 0.048); }
+
 .cart-title {
   width: 100%;
   height: 100px;
@@ -255,7 +258,7 @@ button.stripe {
   width: 9%;
   height: 25%;
   border: none;
-  background-color: white;
+  background-color: transparent;
   font-size: 16px; }
 
 .back-link {
@@ -319,9 +322,9 @@ body {
 
 .chooseTable {
   color: #dfdede;
-  font-size: 20px;
+  font-size: 26px;
   line-height: 40px;
-  margin-top: 30px;
+  margin-top: 90px;
   text-shadow: 2px 2px #2b2c2f;
   letter-spacing: 3px; }
 
@@ -333,11 +336,13 @@ body {
 
 .home-input {
   margin: 10px;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   outline: none;
   background: #cac8c8;
-  font-weight: bold; }
+  font-weight: bold;
+  font-size: 28px;
+  margin-left: 70px; }
 
 .next-btn {
   background-color: rgba(255, 255, 255, 0);
@@ -383,6 +388,9 @@ a.log {
   color: rgba(255, 255, 255, 0.514);
   text-decoration: none; }
 
+.full {
+  background-color: rgba(0, 0, 0, 0.048); }
+
 .Wrap-Menu {
   display: grid;
   grid-template-columns: 1fr;
@@ -391,7 +399,8 @@ a.log {
   justify-content: stretch;
   align-items: stretch;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.048); }
 
 .menu-top {
   width: 100%;
@@ -471,7 +480,7 @@ a.log {
     flex-direction: row;
     background-size: cover;
     margin: 7px;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.397);
     opacity: 1; }
   .dessert1111 .dessert21 {
     display: flex;
@@ -480,7 +489,7 @@ a.log {
     flex-direction: row;
     background-size: cover;
     margin: 7px;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.397);
     opacity: 1; }
   .dessert1111 .dessert31 {
     display: flex;
@@ -489,7 +498,7 @@ a.log {
     flex-direction: row;
     background-size: cover;
     margin: 7px;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.397);
     opacity: 1; }
   .dessert1111 .dessert41 {
     display: flex;
@@ -498,7 +507,7 @@ a.log {
     flex-direction: row;
     background-size: cover;
     margin: 7px;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.397);
     opacity: 1; }
   .dessert1111 .dessert51 {
     display: flex;
@@ -507,7 +516,7 @@ a.log {
     flex-direction: row;
     background-size: cover;
     margin: 7px;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.397);
     opacity: 1; }
 
 .dessert11:hover {
@@ -579,10 +588,11 @@ a.log {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row; }
+  flex-direction: row;
+  position: absolute; }
   .nav-container .drinks {
     height: 50px;
-    width: 50px;
+    width: 53px;
     background-image: url("https://imgur.com/bMd7UxS.jpg");
     background-size: cover; }
   .nav-container .linkk {
@@ -604,8 +614,8 @@ a.log {
     background-image: url("https://imgur.com/kVSPSQi.jpg");
     background-size: cover; }
   .nav-container .apps {
-    height: 48px;
-    width: 48px;
+    height: 47px;
+    width: 47px;
     background-image: url("https://imgur.com/X5t9qBa.jpg");
     background-size: cover; }
   .nav-container .entrees {
@@ -613,6 +623,94 @@ a.log {
     width: 50px;
     background-image: url("https://imgur.com/w2NxWDv.jpg");
     background-size: cover; }
+
+.nav-container1 {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  position: absolute; }
+  .nav-container1 .drinks1 {
+    height: 43px;
+    width: 45px;
+    background-color: rgba(0, 0, 0, 0.342);
+    background-size: cover;
+    opacity: 0;
+    border-radius: 100px;
+    margin-bottom: 1px; }
+  .nav-container1 .salads1 {
+    height: 46px;
+    width: 46px;
+    background-color: rgba(0, 0, 0, 0.342);
+    background-size: cover;
+    opacity: 0;
+    border-radius: 100px;
+    margin-right: 5px; }
+  .nav-container1 .desserts1 {
+    height: 43px;
+    width: 43px;
+    margin-left: 7px;
+    background-color: rgba(0, 0, 0, 0.342);
+    background-size: cover;
+    opacity: 0;
+    border-radius: 100px; }
+  .nav-container1 .apps1 {
+    height: 45px;
+    width: 45px;
+    background-color: rgba(0, 0, 0, 0.342);
+    background-size: cover;
+    opacity: 0;
+    border-radius: 100px;
+    margin-left: 5px; }
+  .nav-container1 .entrees1 {
+    height: 44px;
+    width: 44px;
+    background-color: rgba(0, 0, 0, 0.342);
+    background-size: cover;
+    opacity: 0;
+    margin-left: 3px;
+    border-radius: 100px; }
+
+.drinks1:hover {
+  opacity: 1; }
+
+.salads1:hover {
+  opacity: 1; }
+
+.entrees1:hover {
+  opacity: 1; }
+
+.desserts1:hover {
+  opacity: 1; }
+
+.apps1:hover {
+  opacity: 1; }
+
+.linkk1 {
+  width: 51px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 7px;
+  letter-spacing: 3px; }
+
+.linkk11 {
+  width: 51px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  color: white;
+  font-size: 6px;
+  letter-spacing: 3px; }
 
 .food-container {
   display: grid;
