--- a/src/styles/component/_HomePage.scss
+++ b/src/styles/component/_HomePage.scss
@@ -11,7 +11,7 @@ body {
 .HomePage-container {
   width: 100%;
   height: 100vh;
-  background: url('https://i.imgur.com/gmaqcSX.jpg') no-repeat center center fixed; 
+//   background: url('https://i.imgur.com/gmaqcSX.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -22,7 +22,7 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
-    background-color: rgba(7, 7, 7, 0.432);
+    background-color: rgba(7, 7, 7, 0.473);
 }
 
 .Login {
@@ -70,7 +70,6 @@ float: right;
    height: 50px;
    outline: none;
    background: rgba(233, 230, 230, 0);
-   font-weight: bold;
    font-size: 32px;
    margin-left: 10px;
    border: 1px solid rgba(0, 0, 0, 0);
