--- a/src/styles/component/_Menu.scss
+++ b/src/styles/component/_Menu.scss
@@ -1,4 +1,3 @@
-
 .Wrap-Menu{
     display: grid;
     grid-template-columns: 1fr;
@@ -8,19 +7,19 @@
     align-items: stretch;
     width: 100%;
     height: 100vh;
-    position: absolute;
+    position: relative;
+    background-color: rgba(128, 128, 128, 0.568);
+    color: rgb(224, 224, 224);
 }
 
+.top-border {
+    margin: 10px 8px 0px 8px;
+    border: 1px solid rgba(255, 255, 255, 0.555);
+}
 
-.menu-top {
-    width: 100%;
-    height: 100px;
-    display: flex;
-	flex-direction: column;
-	flex-wrap: nowrap;
-	justify-content: center;
-	align-items: center;
-    align-content: center;
+.top-border2 {
+    margin: 10px 8px 10px 8px;
+    border: 1px solid black;
 }
 
 .dessert111 {
@@ -38,7 +37,7 @@
         @include flexSetUp(center, flex-end);
         background-image: url('https://i.imgur.com/s2fvVxc.jpg');
         background-size: cover;
-        margin: 7px;
+        margin: 7px;    
     }
 
     .dessert2 {
@@ -77,7 +76,7 @@
     width: 100%;
     height: 75vh;
     font-size: 55px;
-    position: absolute;
+    position: relative;
 
     .dessert11 {
         @include flexSetUp(center, flex-end);
@@ -86,7 +85,6 @@
         background-color:rgba(7, 7, 7, 0.397);
         opacity: 1;
     }
-
     .dessert21 {
         @include flexSetUp(center, flex-end);
         background-size: cover;
@@ -117,7 +115,6 @@
     }
     
 }
-
     .dessert11:hover {
         opacity: 0;
     }
@@ -134,10 +131,8 @@
         opacity: 0;
     }
 
-
 .top2 {
 height: 80%;
-margin-bottom: 580px;
 }
 
 .top {
@@ -146,7 +141,6 @@ margin-bottom: 580px;
 }
 
 .dev {
-    margin: 15px;
     font-family: 'Lobster', sans-serif;
     margin-left: 25px;
 }
@@ -157,9 +151,15 @@ margin-bottom: 580px;
 
 .Link-menu {
     text-decoration: none;
-    color: rgb(223, 222, 222);
-    text-shadow: 2px 2px #2b2c2f;
-    width: 100%;
-    height: 100%;
+    color: rgb(214, 214, 214);
+    width: 85%;
+    height: 90%;
+    border: 1px solid rgba(255, 255, 255, 0.555);
+    margin-bottom: 25px;
     @include flexSetUp(center,flex-end);
 }
+
+
+
+
+
