--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,48 +4,45 @@
 .top {
   float: right; }
 
-.Orders-container {
-  border: 1px solid yellow;
-  width: 30%;
-  height: 100%;
+.orderChat {
+  width: 90%;
+  height: 40vh;
+  font-size: 20px;
+  border: 1px solid black;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: minmax(100px, auto);
-  justify-content: stretch;
-  align-items: stretch;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row; }
+  grid-auto-rows: minmax(300px, auto);
+  margin: 30px; }
+
+.Orders-container {
+  width: 100%;
+  height: 100%;
+  overflow: scroll; }
   .Orders-container .Orders {
-    border: 1px solid blue;
     width: 100%;
-    height: 100%;
+    height: 75%;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    align-content: center; }
+    align-items: stretch;
+    align-content: stretch; }
     .Orders-container .Orders .order-title {
       width: 100%;
       height: 10%;
       font-size: 24px; }
     .Orders-container .Orders .table {
       width: 100%;
-      height: 10%;
-      border: 1px solid red;
-      border-bottom: none; }
+      height: 13%;
+      border-bottom: 1px solid black; }
     .Orders-container .Orders .orders {
       width: 100%;
-      height: 42%;
+      height: 100%;
       overflow: scroll;
-      border: 1px solid green;
-      border-bottom: none;
       text-align: left; }
     .Orders-container .Orders .btn-totalbox {
       width: 100%;
-      height: 15%;
-      border: 1px solid black;
+      height: 25%;
+      float: bottom;
       display: flex;
       justify-content: center;
       align-items: center;
