--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -50,6 +50,10 @@
       .Orders-container .Orders .btn-totalbox .btn {
         width: 25%;
         height: 50%; }
+    .Orders-container .Orders .item {
+      display: flex;
+      border-bottom: 1px solid lightgray;
+      justify-content: space-between; }
 
 .cart-title {
   width: 100%;
