--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -478,6 +478,11 @@ option {
 .home-input:hover {
   background-color: rgba(255, 255, 255, 0.171); }
 
+.menu-page {
+  background-color: rgba(0, 0, 0, 0.89);
+  width: 100%;
+  height: 100vh; }
+
 .Wrap-Menu {
   display: grid;
   grid-template-columns: 1fr;
@@ -486,8 +491,7 @@ option {
   justify-content: stretch;
   align-items: stretch;
   width: 100%;
-  height: 100vh;
-  position: relative;
+  height: auto;
   background-color: rgba(128, 128, 128, 0.568);
   color: #e0e0e0; }
 
@@ -530,7 +534,7 @@ option {
     justify-content: center;
     align-items: flex-end;
     flex-direction: row;
-    background-image: url("https://i.imgur.com/d7wVdrD.jpg?1");
+    background-image: url("https://i.imgur.com/d7wVdrD.jpg");
     background-size: cover;
     margin: 7px; }
   .dessert111 .dessert4 {
@@ -629,7 +633,9 @@ option {
 
 .dev {
   font-family: 'Lobster', sans-serif;
-  margin-left: 25px; }
+  color: #e0dede;
+  font-size: 62px;
+  padding-top: 10px; }
 
 .fork {
   display: flex;
@@ -648,6 +654,305 @@ option {
   justify-content: center;
   align-items: flex-end;
   flex-direction: row; }
+
+#container {
+  width: 100%;
+  background-color: black; }
+
+/*photobanner*/
+.first {
+  -webkit-animation: bannermove 40s linear infinite;
+  -moz-animation: bannermove 40s linear infinite;
+  -ms-animation: bannermove 40s linear infinite;
+  -o-animation: bannermove 40s linear infinite;
+  animation: bannermove 40s linear infinite; }
+
+@keyframes bannermove {
+  0% {
+    margin-left: 400px; }
+  100% {
+    margin-left: -2125px; } }
+
+@-moz-keyframes bannermove {
+  0% {
+    margin-left: 400px; }
+  100% {
+    margin-left: -2125px; } }
+
+@-webkit-keyframes bannermove {
+  0% {
+    margin-left: 400px; }
+  100% {
+    margin-left: -2125px; } }
+
+@-ms-keyframes bannermove {
+  0% {
+    margin-left: 400px; }
+  100% {
+    margin-left: -2125px; } }
+
+@-o-keyframes bannermove {
+  0% {
+    margin-left: 400px; }
+  100% {
+    margin-left: -2125px; } }
+
+.photobanner {
+  overflow: scroll;
+  display: flex; }
+
+.photobanner img:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  transform: scale(1.1);
+  cursor: pointer;
+  -webkit-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.2); }
+
+.MenuDrinks {
+  width: 50%;
+  height: 50%;
+  float: left;
+  background-image: url("https://imgur.com/Mo40cTn.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuAppetizers {
+  width: 50%;
+  height: 50%;
+  float: right;
+  background-image: url("https://imgur.com/ovZbjgd.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuEntrees {
+  width: 50%;
+  height: 50%;
+  float: left;
+  background-image: url("https://imgur.com/apTHTx5.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuDesserts {
+  width: 50%;
+  height: 50%;
+  float: right;
+  background-image: url("https://imgur.com/V3733e8.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuSpecials {
+  width: 20%;
+  height: 20%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  background-color: #202020;
+  border-radius: 100px;
+  font-size: 30px;
+  letter-spacing: 5px;
+  border: 1px solid white;
+  text-decoration: none;
+  outline: none; }
+
+.bottom-Menu {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  font-size: 42px;
+  letter-spacing: 7px; }
+
+.top-Menu {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  font-size: 42px;
+  letter-spacing: 7px; }
+
+.MenuDrinks1 {
+  width: 50%;
+  height: 50%;
+  float: left;
+  background-color: rgba(0, 0, 0, 0.637);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  opacity: 1px;
+  text-decoration: none;
+  outline: none; }
+
+.MenuDrinks1:hover {
+  background-color: transparent; }
+
+.MenuAppetizers1 {
+  width: 50%;
+  height: 50%;
+  float: right;
+  background-color: rgba(0, 0, 0, 0.637);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuAppetizers1:hover {
+  background-color: transparent; }
+
+.MenuEntrees1 {
+  width: 50%;
+  height: 50%;
+  float: left;
+  background-color: rgba(0, 0, 0, 0.637);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuEntrees1:hover {
+  background-color: transparent; }
+
+.MenuDesserts1 {
+  width: 50%;
+  height: 50%;
+  float: right;
+  background-color: rgba(0, 0, 0, 0.637);
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  text-decoration: none;
+  outline: none; }
+
+.MenuDesserts1:hover {
+  background-color: transparent; }
+
+.Menu-Appetizers {
+  width: 100%;
+  height: 550px;
+  background-image: url("https://imgur.com/ksN47Xd.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: center; }
+  .Menu-Appetizers .appetizers-container {
+    width: 40%;
+    height: 70%;
+    float: left;
+    background-color: rgba(255, 255, 255, 0.534);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    box-shadow: 2px 4px 4px 4px rgba(0, 0, 0, 0.459); }
+  .Menu-Appetizers .appetizers-container2 {
+    width: 30%;
+    height: 30%;
+    background-color: rgba(34, 33, 33, 0.575);
+    float: right;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    color: white;
+    font-size: 55px;
+    letter-spacing: 7px;
+    font-weight: lighter; }
+
+.appetizers-div {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  color: rgba(255, 255, 255, 0.63);
+  font-size: 14px;
+  line-height: 20px; }
+
+.container-shadow {
+  width: 100%;
+  height: 260px;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.432); }
+
+.bottom-div {
+  height: 10px; }
+
+.Specials {
+  background-color: rgba(0, 0, 0, 0.89); }
+
+.threecourse {
+  margin-top: 10px;
+  font-size: 34px;
+  letter-spacing: 4px; }
+
+.appentdes {
+  margin-top: 10px;
+  margin-bottom: 60px;
+  font-size: 18px; }
+
+.orderNow {
+  border: 1px solid rgba(0, 0, 0, 0.411);
+  padding: 10px 14px 10px 14px;
+  font-size: 24px;
+  letter-spacing: 3px;
+  background-color: rgba(255, 255, 255, 0.49);
+  color: rgba(0, 0, 0, 0.781);
+  text-decoration: none; }
 
 .title {
   width: 100%;
