--- a/src/styles/component/_AdminPage.scss
+++ b/src/styles/component/_AdminPage.scss
@@ -16,7 +16,7 @@
     grid-auto-rows: minmax(300px, auto);
     // justify-content: stretch;
     // align-items: stretch;
-    margin: 30px;
+    margin: 60px;
 }
 
 .Orders-container {
@@ -63,6 +63,7 @@
             width: 100%;
             height: 25%;
             float: bottom;
+            margin-bottom: 20px;
             // border: 1px solid black;
             // border-right: 1px solid black;
             @include flexSetUp(center, center);
