--- a/src/styles/component/_CheckoutPage.scss
+++ b/src/styles/component/_CheckoutPage.scss
@@ -194,18 +194,29 @@
                         border-bottom: none;
                         display: flex;
                         justify-content: flex-end;
+                        
                     }
     
                     .btn-totalbox {
                         width: 100%;
-                        height: 15%;
+                        height: 17%;
                         border: 1px solid black;
                         @include flexSetUp(center, center);
-    
-                        .stripe-btn {
-                            width: 25%;
-                            height: 50%;
+
+                        .formContainer {
+                            margin-bottom: 10px;
+                            margin-left: 5px;
+                            .email-input {
+                                margin-right: 5px;
+                                border-radius: 3px;
+                            }
                         }
+
+                        .stripe {
+                            margin-left: 20px;
+                        }
+    
+                      
                     }
     
                     
@@ -280,7 +291,9 @@
     }
 }
 
-
+.email {
+    padding: 5px;
+}
 
 
   
@@ -313,7 +326,7 @@
   .chatbox {
       width: 100%;
       overflow: scroll;
-    //   border: 1px solid red;
+      //border: 1px solid red;
   }
 
   .chat-input {
@@ -347,9 +360,30 @@
     overflow: scroll;
     font-size: 16px;
     line-height: 30px;
+    // display: inline-block;
     // border: 1px solid black;
   }
 
+  .Chat {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(300px, auto);
+    // border: red solid 4px;
+    .chat-ques {
+        
+    }
+        
+    .chat-read {
+       color: #d1b183; 
+    }
+  }
+  .chat-ques {
+
+  }
+
+  .chat-read {
+     color: #d1b183; 
+  }
   .enter-message {
     width: 100%;
     height:20%;
